# api/swagger/v1/swagger.yaml
@@ -9,6 +9,41 @@ components:
       type: http
       scheme: bearer
       bearerFormat: Token
+  schemas:
+    ErrorObject:
+      type: object
+      properties:
+        error:
+          type: object
+          properties:
+            code:
+              type: string
+            message:
+              type: string
+          required:
+          - code
+          - message
+      required:
+      - error
+  responses:
+    UnauthorizedError:
+      description: Unauthorized
+      content:
+        application/json:
+          schema:
+            "$ref": "#/components/schemas/ErrorObject"
+    UnprocessableContentError:
+      description: Unprocessable content
+      content:
+        application/json:
+          schema:
+            "$ref": "#/components/schemas/ErrorObject"
+    InternalServerError:
+      description: Internal server error
+      content:
+        application/json:
+          schema:
+            "$ref": "#/components/schemas/ErrorObject"
 security:
 - bearerAuth: []
 paths:
@@ -178,57 +213,18 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: object
-                    properties:
-                      code:
-                        type: string
-                      message:
-                        type: string
-                    required:
-                    - code
-                    - message
-                required:
-                - error
+                "$ref": "#/components/schemas/ErrorObject"
         '422':
-          description: invalid filters (mixed date/range or invalid date format)
+          description: invalid date format
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: object
-                    properties:
-                      code:
-                        type: string
-                      message:
-                        type: string
-                    required:
-                    - code
-                    - message
-                required:
-                - error
+                "$ref": "#/components/schemas/ErrorObject"
         '500':
           description: internal server error
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: object
-                    properties:
-                      code:
-                        type: string
-                      message:
-                        type: string
-                    required:
-                    - code
-                    - message
-                required:
-                - error
+                "$ref": "#/components/schemas/ErrorObject"
 servers:
 - url: http://127.0.0.1:3000
